시퀀스 구조화

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".P_SetPresentActivity"></activity>
+        <activity android:name=".P_UnmatchedActivity"></activity>
+        <activity android:name=".C_UnmatchedActivity" />
+        <activity android:name=".C_HomeActivity" />
+        <activity android:name=".P_SetPresentActivity" />
         <activity android:name=".P_SetBallonActivity" />
         <activity android:name=".P_HomeActivity" />
         <activity android:name=".Matching" />
