--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,13 @@
         <activity android:name=".Matching" />
 
         <service
+            android:name=".pushNoti.FCMservice"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <service
             android:name=".service.BootReceiver"
             android:enabled="true"
             android:exported="true" />
@@ -32,10 +39,6 @@
             android:name=".service.ScreenService"
             android:enabled="true"
             android:exported="true" />
-        <service
-            android:name=".ScreenListenerService"
-            android:enabled="true"
-            android:exported="false" />
 
         <activity android:name=".MainActivity">
             <intent-filter>
