--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".C_HistoryActivity"></activity>
+        <activity android:name=".OpenPresentActivity"></activity>
+        <activity android:name=".C_HistoryActivity" />
         <activity android:name=".P_UnmatchedActivity" />
         <activity android:name=".C_UnmatchedActivity" />
         <activity android:name=".C_HomeActivity" />
