--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
     implementation 'com.squareup.okhttp3:okhttp:3.4.1'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'nl.dionsegijn:konfetti:1.3.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
